#PhysBAM Edit: Custom CMake File
PROJECT(stackwalker)
CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

set(CMAKE_DEBUG_POSTFIX "d")

SET(STACKWALKER_HDRS
    StackWalker.h)

SET(STACKWALKER_SRCS
    StackWalker.cpp)

ADD_LIBRARY(stackwalker STATIC ${STACKWALKER_HDRS} ${STACKWALKER_SRCS})

SET(CMAKE_INSTALL_PREFIX "../../")

SET(STACKWALKER_HDRS_INST
    StackWalker.h)

IF(NOT SKIP_INSTALL_LIBRARIES AND NOT SKIP_INSTALL_ALL)
    INSTALL(TARGETS stackwalker
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib )
ENDIF()
IF(NOT SKIP_INSTALL_HEADERS AND NOT SKIP_INSTALL_ALL )
    INSTALL(FILES ${STACKWALKER_HDRS_INST} DESTINATION include)
ENDIF()