#CMakeLists.txt from http://trac.dinoprojects.com/dinoprojects/browser/freeglut/trunk

PROJECT(freeglut)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

SET(FREEGLUT_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")

FIND_PACKAGE(OpenGL REQUIRED)

# checks for header files.
INCLUDE(CheckIncludeFiles)

IF(WIN32)
    CHECK_INCLUDE_FILES("windows.h;GL/gl.h" HAVE_GL_GL_H)
    CHECK_INCLUDE_FILES("windows.h;GL/glu.h" HAVE_GL_GLU_H)
    CHECK_INCLUDE_FILES("windows.h;GL/glx.h" HAVE_GL_GLX_H)
ELSE(WIN32)
    CHECK_INCLUDE_FILES(GL/gl.h HAVE_GL_GL_H)
    CHECK_INCLUDE_FILES(GL/glu.h HAVE_GL_GLU_H)
    CHECK_INCLUDE_FILES(GL/glx.h HAVE_GL_GLX_H)
ENDIF(WIN32)

CHECK_INCLUDE_FILES(fcntl.h HAVE_FCNTL_H)
CHECK_INCLUDE_FILES(limits.h HAVE_LIMITS_H)
CHECK_INCLUDE_FILES(sys/ioctl.h HAVE_SYS_IOCTL_H)
CHECK_INCLUDE_FILES(sys/param.h HAVE_SYS_PARAM_H)
CHECK_INCLUDE_FILES(sys/time.h HAVE_SYS_TIME_H)
CHECK_INCLUDE_FILES(X11/extensions/xf86vmode.h X11_EXTENSIONS_XF86VMODE_H)
CHECK_INCLUDE_FILES(X11/extensions/XI.h X11_EXTENSIONS_XI_H)
CHECK_INCLUDE_FILES(X11/extensions/XInput.h X11_EXTENSIONS_XINPUT_H)

IF(HAVE_SYS_TIME_H)
    CHECK_INCLUDE_FILES("sys/time.h;time.h" TIME_WITH_SYS_TIME)
ELSE(HAVE_SYS_TIME_H)
    SET(TIME_WITH_SYS_TIME 0)
ENDIF(HAVE_SYS_TIME_H)

# checks for library functions.
INCLUDE(CheckFunctionExists)
INCLUDE(CheckLibraryExists)

IF(NOT WIN32)
CHECK_FUNCTION_EXISTS(vprintf HAVE_VPRINTF)
ENDIF(NOT WIN32)

CHECK_FUNCTION_EXISTS(gettimeofday HAVE_GETTIMEOFDAY)

CHECK_LIBRARY_EXISTS(m sqrt "" HAVE_LIBM)

#PhysBAM Edit: Set install path
SET(CMAKE_INSTALL_PREFIX "../../")

INCLUDE_DIRECTORIES(${FREEGLUT_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR})

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)

SUBDIRS(src)